# pricesentinel

./: .commitlintrc.json  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT_SENSITIVE_INFO.md  BUILD_ASSESSMENT_REPORT.md  CODE_OF_CONDUCT.md  CONSOLIDATED_ASSESSMENT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_GUIDE.md  LICENSE  QUICKSTART.md  QUICK_FIXES.md  QUICK_START_FIXES.md  README.md  REUSE.toml  SECURITY.md  TROUBLESHOOTING.md  commitlint.config.cjs  compare_runs.py  docker-compose.yml  inspect_run.py  main.py  mkdocs.yml  mypy.ini  pyproject.toml  pyproject.toml.backup  pyproject.toml.improved  pytest.ini  renovate.json  ruff.toml  run_pipeline.py  setup_country.py  tasks.py  verify_fixes.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build_and_test.yml  ci.yml  ci.yml.improved  commitlint.yml  security.yml
config/: __init__.py  adapter_registry.py  country_registry.py  validation.py
config/countries/: PT.yaml  XX.yaml
config/monitoring/: PT.yaml  XX.yaml
config/selection_policies/: PT.yaml  XX.yaml
core/: __init__.py  abstractions.py  cleaning.py  cross_validation.py  data_manager.py  exceptions.py  feature_selection.py  features.py  guards.py  imputation.py  inspection.py  logging_config.py  metadata_manager.py  monitoring.py  pipeline.py  pipeline_builder.py  repository.py  time_normalizer.py  types.py  verification.py
core/stages/: base.py  fetch_stage.py
data_fetchers/: __init__.py
data_fetchers/mock/: __init__.py  electricity.py  events.py  gas.py  weather.py
data_fetchers/portugal/: __init__.py  electricity.py  events.py
data_fetchers/shared/: __init__.py  open_meteo.py  ttf_gas.py
docs/: ARCHITECTURE.md  COUNTRY_ONBOARDING.md  FEATURE_TOGGLES.md  RUNBOOKS.md  TRAINING.md  index.md
docs/api/core/: abstractions.md
docs/getting-started/: installation.md
experiments/: __init__.py  ablation_pt.py  benchmark_pt.py  daily_ops.py  ensemble_walk_forward_pt.py  model_comparison.py  qualify_country.py  run_comparison.py  run_cv.py  run_training.py  select_champion.py  walk_forward_pt.py
models/: __init__.py  base.py  ensemble_trainer.py  explainability.py  hpo.py  lightgbm_trainer.py  model_registry.py  run_forecast.py  sklearn_trainer.py  statistical_trainer.py  tracking.py  xgboost_trainer.py
models/deep_learning/: __init__.py  base.py  nbeats_trainer.py  tft_trainer.py
tests/: __init__.py  test_abstractions.py  test_advanced_features.py  test_cli_and_setup.py  test_cross_validation.py  test_daily_ops.py  test_ensemble.py  test_event_flags_pt.py  test_explainability.py  test_feature_engineer.py  test_forecast_generation.py  test_hpo.py  test_inference.py  test_inspection.py  test_lightgbm_trainer.py  test_logging_and_data_manager.py  test_mock_country.py  test_model_comparison.py  test_model_factory.py  test_model_registry.py  test_monitoring.py  test_nbeats_trainer.py  test_pipeline_mock_training.py  test_portugal_and_shared_fetchers.py  test_portugal_pipeline_smoke.py  test_properties.py  test_qualification_workflow.py  test_registry.py  test_select_champion.py  test_setup_country_scaffolding.py  test_statistical_trainers.py  test_tasks.py  test_tft_trainer.py  test_training_workflow.py  test_validation.py  test_walk_forward.py  test_xgboost_trainer.py
tests/models/XX/baseline/20251117_154057/: metrics.json
tests/models/XX/baseline/20251117_154106/: metrics.json
tests/models/XX/baseline/20251117_154503/: metrics.json
tests/models/XX/baseline/20251117_154708/: metrics.json
tests/models/XX/baseline/20251117_155212/: metrics.json
tests/models/XX/baseline/20251117_155737/: metrics.json
tests/unit/: test_adapter_registry.py  test_country_config_loading.py  test_verification.py
