[project]
name = "pricesentinel"
version = "0.1.0"
description = "Multi-country energy price forecasting system with event awareness"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.5.0",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "xmltodict>=0.14.2",
    "holidays>=0.63",
    "pytest>=9.0.1",
    "pandas-stubs==2.3.2.250926",
]

[project.optional-dependencies]
dev = [
    "pandas-stubs>=2.3.2",
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pip-audit>=2.8.0",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.32.0",
    "types-xmltodict>=0.14.0",
    "invoke>=2.2.0",
    "types-invoke>=2.0.0",
    "build>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "config", "data_fetchers"]

[[tool.mypy.overrides]]
module = "holidays"
ignore_missing_imports = true
