# Copyright (c) 2025 Soares
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pricesentinel"
version = "0.1.0"
description = "Multi-country energy price forecasting with event awareness and data quality guards"
readme = "README.md"
requires-python = ">=3.12,<3.14"


license = {text = "Apache-2.0"}
authors = [
    {name = "Soares", email = "joaosoarex@gmail.com"},
]
maintainers = [
    {name = "Soares", email = "joaosoarex@gmail.com"},
]
keywords = [
    "energy",
    "forecasting",
    "electricity-prices",
    "machine-learning",
    "time-series",
    "energy-markets",
    "price-prediction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.4,<3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "httpx[http2]>=0.28.1",
    "xmltodict>=0.14.2",
    "scikit-learn>=1.6.0",
    "holidays>=0.40",
    "click>=8.3.1",
    "tqdm>=4.67.2",
    "alembic>=1.18.4",
    "annotated>=0.0.2",
    "babel>=2.18.0",
    "backrefs>=6.2",
    "bandit>=1.9.4",
    "blinker>=1.9.0",
    "boolean-py>=5.0",
    "build>=1.4.2",
    "cachecontrol>=0.14.4",
    "cachetools>=7.0.5",
    "cfgv>=3.5.0",
    "cloudpickle>=3.1.2",
    "colorlog>=6.10.1",
    "contourpy>=1.3.3",
    "coverage>=7.13.5",
    "cryptography>=46.0.6",
    "cycler>=0.12.1",
    "cyclonedx-python-lib>=11.7.0",
    "databricks-sdk>=0.102.0",
    "defusedxml>=0.7.1",
    "distlib>=0.4.0",
    "docker>=7.1.0",
    "docutils>=0.22.4",
    "execnet>=2.1.2",
    "fastapi>=0.135.2",
    "filelock>=3.25.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "fonttools>=4.62.1",
    "fsspec>=2026.2.0",
    "ghp-import>=2.1.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.46",
    "google-auth>=2.49.1",
    "graphene>=3.4.3",
    "graphql-core>=3.2.8",
    "graphql-relay>=3.2.0",
    "greenlet>=3.3.2",
    "griffe>=2.0.2",
    "griffecli>=2.0.1",
    "griffelib>=2.0.1",
    "huey>=2.6.0",
    "hypothesis>=6.151.9",
    "id>=1.6.1",
    "identify>=2.6.18",
    "importlib-metadata>=8.7.1",
    "iniconfig>=2.3.0",
    "invoke>=2.2.1",
    "itsdangerous>=2.2.0",
    "jaraco-classes>=3.4.0",
    "jaraco-context>=6.1.2",
    "jaraco-functools>=4.4.0",
    "jinja2>=3.1.6",
    "keyring>=25.7.0",
    "kiwisolver>=1.5.0",
    "librt>=0.8.1",
    "license-expression>=30.4.4",
    "lightgbm>=4.6.0",
    "llvmlite>=0.36.0",
    "mako>=1.3.10",
    "markdown>=3.10.2",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.8",
    "mdurl>=0.1.2",
    "mergedeep>=1.3.4",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-get-deps>=0.2.2",
    "mkdocs-material>=9.7.6",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.3",
    "mlflow>=3.11.1",
    "mlflow-skinny>=3.10.1",
    "mlflow-tracing>=3.10.1",
    "more-itertools>=10.8.0",
    "mpmath>=1.3.0",
    "msgpack>=1.1.2",
    "mypy>=1.19.1",
    "mypy-extensions>=1.1.0",
    "networkx>=3.6.1",
    "nh3>=0.3.4",
    "nodeenv>=1.10.0",
    "numba>=0.53.1",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-proto>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-semantic-conventions>=0.61b0",
    "optuna>=4.8.0",
    "packageurl-python>=0.17.6",
    "packaging>=26.0",
    "paginate>=0.5.7",
    "pandas-stubs>=3.0.0.260204",
    "pathspec>=1.0.4",
    "patsy>=1.0.2",
    "pillow>=12.1.1",
    "pip>=26.0.1",
    "pip-api>=0.0.34",
    "pip-audit>=2.10.0",
    "pip-requirements-parser>=32.0.1",
    "platformdirs>=4.9.4",
    "pluggy>=1.6.0",
    "pre-commit>=4.5.1",
    "prettytable>=3.17.0",
    "protobuf>=6.33.6",
    "py-serializable>=2.1.0",
    "pyarrow>=23.0.1",
    "pyasn1>=0.6.3",
    "pyasn1-modules>=0.4.2",
    "pycparser>=3.0",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.21",
    "pyparsing>=3.3.2",
    "pyproject-hooks>=1.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.2",
    'pywin32>=311; sys_platform == "win32"',
    'pywin32-ctypes>=0.2.3; sys_platform == "win32"',
    "pyyaml-env-tag>=1.1",
    "readme-renderer>=44.0",
    "requests-toolbelt>=1.0.0",
    "rfc3986>=2.0.0",
    "rich>=14.3.3",
    "rsa>=4.9.1",
    "ruff>=0.15.7",
    "setuptools>=81.0.0",
    "shap>=0.51.0",
    "skops>=0.13.0",
    "slicer>=0.0.8",
    "smmap>=5.0.3",
    "sortedcontainers>=2.4.0",
    "sqlalchemy>=2.0.48",
    "sqlparse>=0.5.5",
    "starlette>=1.0.0",
    "statsmodels>=0.14.6",
    "stevedore>=5.7.0",
    "sympy>=1.14.0",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
    "torch>=2.11.0",
    "twine>=6.2.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260324",
    "uvicorn>=0.42.0",
    "virtualenv>=21.2.0",
    "waitress>=3.0.2",
    "watchdog>=6.0.0",
    "wcwidth>=0.6.0",
    "werkzeug>=3.1.7",
    "xgboost>=3.2.0",
    "zipp>=3.23.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.14.1",
    "pre-commit>=4.0.0",
    "pandas-stubs>=2.3.2.250926,<3.1",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.32.0",
    "invoke>=2.2.0",
    "build",
]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-asyncio>=0.25.2",
    "hypothesis>=6.98.0",
]
security = [
    "pip-audit>=2.7.0",
    "bandit>=1.8.0",
]
build = [
    "build>=1.2.1",
    "twine>=5.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]
ml = [
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "optuna>=4.1.0",
    "shap>=0.50.0",
    "statsmodels>=0.14.0",
]
deep = [
    "torch>=2.5.0",
]
tracking = [
    "mlflow>=2.19.0",
]
all = [
    "pricesentinel[dev,test,security,build,docs,ml,deep,tracking]",
]

[project.urls]
Homepage = "https://github.com/JDPS/pricesentinel"
Repository = "https://github.com/JDPS/pricesentinel"
Documentation = "https://github.com/JDPS/pricesentinel#readme"
Issues = "https://github.com/JDPS/pricesentinel/issues"

[project.scripts]
pricesentinel = "run_pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "config", "data_fetchers", "models", "experiments"]


# Tool configurations consolidated

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
    "--basetemp=.pytest_temp_safe",
    "-p", "no:cacheprovider",
    "--ignore=tests/test_tasks.py",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests spanning multiple components",
    "slow: Tests that take a long time to run",
    "api: Tests that require external API access",
    "asyncio: Mark test as using asyncio",
]
norecursedirs = [".git", ".venv", "venv", "env", "data", "logs", "outputs", "models", ".hypothesis", ".pytest_temp_safe"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
    "verify_fixes.py",
    "setup_country.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
]
fail_under = 40
show_missing = true
precision = 2

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "core.*"
disallow_untyped_defs = true
no_implicit_reexport = true
warn_unused_ignores = true
strict = true

[[tool.mypy.overrides]]
module = "models.*"
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = "models.deep_learning.*"
disallow_untyped_defs = false
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "data_fetchers.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "config.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "data_fetchers.portugal.events"
disable_error_code = "attr-defined"

[[tool.mypy.overrides]]
module = "tasks"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "requests.*",
    "xmltodict.*",
    "sklearn.*",
    "xgboost.*",
    "lightgbm.*",
    "optuna.*",
    "shap.*",
    "statsmodels.*",
    "torch.*",
    "mlflow",
    "mlflow.*",
    "holidays",
    "holidays.*",
    "invoke.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F",        # pyflakes/pycodestyle
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "S",             # bandit (security)
    "N",             # pep8-naming
    "ARG",           # unused function args
    "C4",            # comprehensions
    "DTZ",           # timezone
    "T20",           # print statements
    "PYI",
]
ignore = [
    "S101",  # allow asserting in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG"]
"verify_fixes.py" = ["T201"]
"run_pipeline.py" = ["T201", "DTZ007"]
"setup_country.py" = ["T201"]
"core/abstractions.py" = ["ARG002"]
"config/validation.py" = ["N805"]
"core/logging_config.py" = ["DTZ005"]
"core/pipeline.py" = ["DTZ005"]
"data_fetchers/**/*.py" = ["DTZ007", "F841"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[dependency-groups]
dev = [
    "tabulate>=0.9.0",
]
